# build-system-templates

./: README.md
automake/: bootstrap.sh  build.sh  clean.sh  configure.ac
automake-libtool/: bootstrap.sh  build.sh  clean.sh
automake-libtool-gnulib/: Makefile.am  build.sh  clean.sh  configure.ac
automake-libtool-gnulib/lib/: Makefile.am
automake-libtool-gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
automake-libtool-gnulib/src/: Makefile.am
automake-libtool-gnulib/src/libhelloworld/: helloworld.cpp  helloworld_export.h
automake-libtool/src/: Makefile.am  Makefile.in  main.cpp
automake-libtool/src/libhelloworld/: helloworld_export.h
automake/src/: Makefile.am  helloworld.cpp  helloworld.h
cmake/: CMakeLists.txt  bootstrap.sh  build.sh  clean.sh
gyp/: helloworld.gyp  helloworld.gypi
qbs/: helloworld.qbs
src/libhelloworld/: helloworld.h  helloworld_export.h
