AC_INIT([helloworld], [0.1.0])
AC_CONFIG_SRCDIR([src/main.cpp])

AM_INIT_AUTOMAKE()
# AC_PROG_LIBTOOL
LT_INIT([win32-dll])
AC_CONFIG_MACRO_DIRS([m4])

ZLIB_REQUIRED_VERSION=0.28
PKG_CHECK_MODULES(ZLIB, zlib >= $ZLIB_REQUIRED_VERSION)

AC_SUBST(ZLIB_CFLAGS)
AC_SUBST(ZLIB_LIBS)

AC_PROG_CXX

AC_OUTPUT(Makefile src/Makefile)
